// Copyright 2024 Apache SeaTunnel
// Licensed under the Apache License, Version 2.0

syntax = "proto3";

package seatunnel.agent.v1;

option go_package = "github.com/seatunnel/seatunnelX/internal/proto/agent";

// AgentService - Control Plane 端 gRPC 服务
// 提供 Agent 注册、心跳、指令下发、日志上报等功能
service AgentService {
  // Agent 注册 - Agent 启动时向 Control Plane 注册
  rpc Register(RegisterRequest) returns (RegisterResponse);
  
  // 心跳上报 - Agent 定期向 Control Plane 发送心跳
  rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
  
  // 双向流 - 指令下发与结果上报
  rpc CommandStream(stream CommandResponse) returns (stream CommandRequest);
  
  // 日志流 - Agent 向 Control Plane 推送日志
  rpc LogStream(stream LogEntry) returns (LogStreamResponse);
}

// ============================================================================
// 注册相关消息 (Requirements 8.2)
// ============================================================================

// RegisterRequest - Agent 注册请求
message RegisterRequest {
  string agent_id = 1;        // Agent 唯一标识
  string hostname = 2;        // 主机名
  string ip_address = 3;      // IP 地址
  string os_type = 4;         // 操作系统类型: linux, darwin, windows
  string arch = 5;            // CPU 架构: amd64, arm64
  string agent_version = 6;   // Agent 版本号
  SystemInfo system_info = 7; // 系统信息
}

// SystemInfo - 系统硬件信息
message SystemInfo {
  int32 cpu_cores = 1;        // CPU 核心数
  int64 total_memory = 2;     // 总内存 (bytes)
  int64 total_disk = 3;       // 总磁盘空间 (bytes)
  string kernel_version = 4;  // 内核版本
}

// RegisterResponse - Agent 注册响应
message RegisterResponse {
  bool success = 1;           // 注册是否成功
  string message = 2;         // 响应消息
  string assigned_id = 3;     // Control Plane 分配的 ID
  AgentConfig config = 4;     // 下发的配置
}


// AgentConfig - Agent 配置信息
message AgentConfig {
  int32 heartbeat_interval = 1;   // 心跳间隔 (秒)
  int32 log_level = 2;            // 日志级别
  map<string, string> extra = 3;  // 扩展配置
}

// ============================================================================
// 心跳相关消息 (Requirements 8.3)
// ============================================================================

// HeartbeatRequest - 心跳请求
message HeartbeatRequest {
  string agent_id = 1;                    // Agent 唯一标识
  int64 timestamp = 2;                    // 时间戳 (Unix 毫秒)
  ResourceUsage resource_usage = 3;       // 资源使用情况
  repeated ProcessStatus processes = 4;   // 进程状态列表
}

// ResourceUsage - 资源使用情况
message ResourceUsage {
  double cpu_usage = 1;       // CPU 使用率 (0-100)
  double memory_usage = 2;    // 内存使用率 (0-100)
  double disk_usage = 3;      // 磁盘使用率 (0-100)
  int64 available_memory = 4; // 可用内存 (bytes)
  int64 available_disk = 5;   // 可用磁盘空间 (bytes)
}

// ProcessStatus - 进程状态信息
message ProcessStatus {
  string name = 1;            // 进程名称
  int32 pid = 2;              // 进程 ID
  string status = 3;          // 状态: running, stopped, unknown
  int64 uptime = 4;           // 运行时长 (秒)
  double cpu_usage = 5;       // CPU 使用率
  int64 memory_usage = 6;     // 内存使用量 (bytes)
}

// HeartbeatResponse - 心跳响应
message HeartbeatResponse {
  bool success = 1;           // 心跳是否成功
  int64 server_time = 2;      // 服务器时间 (Unix 毫秒)
}

// ============================================================================
// 指令相关消息 (Requirements 8.4, 8.5)
// ============================================================================

// CommandRequest - 指令请求 (Control Plane -> Agent)
message CommandRequest {
  string command_id = 1;              // 指令唯一标识
  CommandType type = 2;               // 指令类型
  map<string, string> parameters = 3; // 指令参数
  int32 timeout = 4;                  // 超时时间 (秒)
}

// CommandType - 指令类型枚举
enum CommandType {
  COMMAND_TYPE_UNSPECIFIED = 0;
  
  // 预检查
  PRECHECK = 1;
  
  // 安装类
  INSTALL = 10;
  UNINSTALL = 11;
  UPGRADE = 12;
  
  // 进程管理
  START = 20;
  STOP = 21;
  RESTART = 22;
  STATUS = 23;
  
  // 诊断类
  COLLECT_LOGS = 30;
  JVM_DUMP = 31;
  THREAD_DUMP = 32;
  
  // 配置类
  UPDATE_CONFIG = 40;
  ROLLBACK_CONFIG = 41;
  PULL_CONFIG = 42;         // 拉取配置文件
  
  // 插件管理
  TRANSFER_PLUGIN = 50;     // 传输插件文件
  INSTALL_PLUGIN = 51;      // 安装插件
  UNINSTALL_PLUGIN = 52;    // 卸载插件
  LIST_PLUGINS = 53;        // 列出已安装插件
  
  // 安装包传输
  TRANSFER_PACKAGE = 60;    // 传输安装包文件
  
  // 集群发现与监控 (Requirements 7.1)
  DISCOVER_CLUSTERS = 70;       // 发现集群
  UPDATE_MONITOR_CONFIG = 71;   // 更新监控配置
  MARK_MANUAL_STOP = 72;        // 标记手动停止
  CLEAR_MANUAL_STOP = 73;       // 清除手动停止标记
}

// CommandResponse - 指令执行结果 (Agent -> Control Plane)
message CommandResponse {
  string command_id = 1;      // 指令唯一标识
  CommandStatus status = 2;   // 执行状态
  int32 progress = 3;         // 执行进度 (0-100)
  string output = 4;          // 标准输出
  string error = 5;           // 错误信息
  int64 timestamp = 6;        // 时间戳 (Unix 毫秒)
}

// CommandStatus - 指令执行状态枚举
enum CommandStatus {
  COMMAND_STATUS_UNSPECIFIED = 0;
  PENDING = 1;    // 等待执行
  RUNNING = 2;    // 执行中
  SUCCESS = 3;    // 执行成功
  FAILED = 4;     // 执行失败
  CANCELLED = 5;  // 已取消
}

// ============================================================================
// 日志相关消息 (Requirements 8.6)
// ============================================================================

// LogEntry - 日志条目
message LogEntry {
  string agent_id = 1;            // Agent 唯一标识
  string command_id = 2;          // 关联的指令 ID (可选)
  int64 timestamp = 3;            // 时间戳 (Unix 毫秒)
  LogLevel level = 4;             // 日志级别
  string message = 5;             // 日志消息
  map<string, string> fields = 6; // 扩展字段
}

// LogLevel - 日志级别枚举
enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  DEBUG = 1;
  INFO = 2;
  WARN = 3;
  ERROR = 4;
}

// LogStreamResponse - 日志流响应
message LogStreamResponse {
  bool success = 1;           // 是否成功
  int64 received_count = 2;   // 已接收的日志条数
}

// ============================================================================
// 插件安装相关消息 (Requirements 5.5, 5.6)
// ============================================================================

// TransferPluginRequest - 传输插件文件请求 (复用文件传输流)
message TransferPluginRequest {
  string plugin_name = 1;     // 插件名称
  string version = 2;         // 版本号
  string file_type = 3;       // 文件类型: connector, dependency
  string file_name = 4;       // 文件名
  bytes chunk = 5;            // 文件块数据
  int64 offset = 6;           // 偏移量
  int64 total_size = 7;       // 总大小
  bool is_last = 8;           // 是否最后一块
  string checksum = 9;        // SHA1 校验和 (仅最后一块)
}

// TransferPluginResponse - 传输插件文件响应
message TransferPluginResponse {
  bool success = 1;           // 是否成功
  string message = 2;         // 消息
  int64 received_bytes = 3;   // 已接收字节数
}

// InstallPluginRequest - 安装插件请求
message InstallPluginRequest {
  string plugin_name = 1;     // 插件名称
  string version = 2;         // 版本号
  string install_path = 3;    // SeaTunnel 安装路径
  repeated string dependencies = 4; // 依赖库文件名列表
}

// InstallPluginResponse - 安装插件响应
message InstallPluginResponse {
  bool success = 1;           // 是否成功
  string message = 2;         // 消息
  string error = 3;           // 错误信息
  string connector_path = 4;  // 连接器安装路径
  repeated string lib_paths = 5; // 依赖库安装路径列表
}

// UninstallPluginRequest - 卸载插件请求
message UninstallPluginRequest {
  string plugin_name = 1;     // 插件名称
  string version = 2;         // 版本号
  string install_path = 3;    // SeaTunnel 安装路径
  bool remove_dependencies = 4; // 是否删除依赖库
}

// UninstallPluginResponse - 卸载插件响应
message UninstallPluginResponse {
  bool success = 1;           // 是否成功
  string message = 2;         // 消息
  string error = 3;           // 错误信息
}

// ListInstalledPluginsRequest - 获取已安装插件列表请求
message ListInstalledPluginsRequest {
  string install_path = 1;    // SeaTunnel 安装路径
}

// InstalledPluginInfo - 已安装插件信息
message InstalledPluginInfo {
  string name = 1;            // 插件名称
  string version = 2;         // 版本号
  string connector_path = 3;  // 连接器路径
  int64 size = 4;             // 文件大小
  int64 installed_at = 5;     // 安装时间 (Unix 毫秒)
}

// ListInstalledPluginsResponse - 获取已安装插件列表响应
message ListInstalledPluginsResponse {
  bool success = 1;           // 是否成功
  string message = 2;         // 消息
  repeated InstalledPluginInfo plugins = 3; // 插件列表
}

// ============================================================================
// 安装包传输相关消息
// ============================================================================

// TransferPackageRequest - 传输安装包请求 (分块传输)
message TransferPackageRequest {
  string version = 1;         // SeaTunnel 版本号
  string file_name = 2;       // 文件名 (apache-seatunnel-{version}-bin.tar.gz)
  bytes chunk = 3;            // 文件块数据
  int64 offset = 4;           // 偏移量
  int64 total_size = 5;       // 总大小
  bool is_last = 6;           // 是否最后一块
  string checksum = 7;        // SHA256 校验和 (仅最后一块)
}

// TransferPackageResponse - 传输安装包响应
message TransferPackageResponse {
  bool success = 1;           // 是否成功
  string message = 2;         // 消息
  int64 received_bytes = 3;   // 已接收字节数
  string local_path = 4;      // 本地保存路径 (传输完成后)
}


// ============================================================================
// 配置文件管理相关消息
// ============================================================================

// PullConfigRequest - 拉取配置文件请求
message PullConfigRequest {
  string install_dir = 1;     // SeaTunnel 安装目录
  string config_type = 2;     // 配置类型: seatunnel.yaml, hazelcast.yaml, jvm_options 等
}

// PullConfigResponse - 拉取配置文件响应
message PullConfigResponse {
  bool success = 1;           // 是否成功
  string message = 2;         // 消息
  string config_type = 3;     // 配置类型
  string content = 4;         // 配置文件内容
  string file_path = 5;       // 文件完整路径
}

// UpdateConfigRequest - 更新配置文件请求
message UpdateConfigRequest {
  string install_dir = 1;     // SeaTunnel 安装目录
  string config_type = 2;     // 配置类型
  string content = 3;         // 新的配置内容
  bool backup = 4;            // 是否备份原文件
}

// UpdateConfigResponse - 更新配置文件响应
message UpdateConfigResponse {
  bool success = 1;           // 是否成功
  string message = 2;         // 消息
  string backup_path = 3;     // 备份文件路径 (如果启用备份)
}


// ============================================================================
// 集群发现相关消息 (Requirements 7.1, 7.2)
// Cluster Discovery Messages
// ============================================================================

// DiscoverClustersRequest - 发现集群请求
// DiscoverClustersRequest - Discover clusters request
message DiscoverClustersRequest {
  string agent_id = 1;        // Agent 唯一标识 / Agent unique identifier
}

// DiscoveredClusterInfo - 发现的集群信息
// DiscoveredClusterInfo - Discovered cluster information
message DiscoveredClusterInfo {
  string name = 1;                          // 集群名称 / Cluster name
  string install_dir = 2;                   // 安装目录 / Installation directory
  string version = 3;                       // SeaTunnel 版本 / SeaTunnel version
  string deployment_mode = 4;               // 部署模式: hybrid, separated / Deployment mode
  repeated DiscoveredNodeInfo nodes = 5;    // 节点列表 / Node list
  map<string, string> config = 6;           // 配置信息 / Configuration
  int64 discovered_at = 7;                  // 发现时间戳 (Unix 毫秒) / Discovery timestamp
}

// DiscoveredNodeInfo - 发现的节点信息
// DiscoveredNodeInfo - Discovered node information
message DiscoveredNodeInfo {
  int32 pid = 1;              // 进程 ID / Process ID
  string role = 2;            // 节点角色: master, worker, hybrid / Node role
  int32 hazelcast_port = 3;   // Hazelcast 端口 / Hazelcast port
  int32 api_port = 4;         // API 端口 / API port
  int64 start_time = 5;       // 启动时间戳 (Unix 毫秒) / Start timestamp
  string cmdline = 6;         // 命令行参数 / Command line arguments
}

// DiscoverClustersResponse - 发现集群响应
// DiscoverClustersResponse - Discover clusters response
message DiscoverClustersResponse {
  bool success = 1;                             // 是否成功 / Success flag
  string message = 2;                           // 消息 / Message
  repeated DiscoveredClusterInfo clusters = 3;  // 发现的集群列表 / Discovered clusters
}

// ============================================================================
// 进程事件相关消息 (Requirements 7.2, 7.3)
// Process Event Messages
// ============================================================================

// ProcessEventType - 进程事件类型枚举
// ProcessEventType - Process event type enumeration
enum ProcessEventType {
  PROCESS_EVENT_UNSPECIFIED = 0;
  PROCESS_STARTED = 1;      // 进程启动 / Process started
  PROCESS_STOPPED = 2;      // 进程停止 / Process stopped
  PROCESS_CRASHED = 3;      // 进程崩溃 / Process crashed
  PROCESS_RESTARTED = 4;    // 进程重启 / Process restarted
}

// ProcessEventReport - 进程事件上报
// ProcessEventReport - Process event report
message ProcessEventReport {
  string agent_id = 1;                  // Agent 唯一标识 / Agent unique identifier
  ProcessEventType event_type = 2;      // 事件类型 / Event type
  int32 pid = 3;                        // 进程 ID / Process ID
  string process_name = 4;              // 进程名称 / Process name
  string install_dir = 5;               // 安装目录 / Installation directory
  string role = 6;                      // 节点角色 / Node role
  int64 timestamp = 7;                  // 时间戳 (Unix 毫秒) / Timestamp
  map<string, string> details = 8;      // 详细信息 / Details
}

// ============================================================================
// 监控配置相关消息 (Requirements 7.3)
// Monitor Configuration Messages
// ============================================================================

// MonitorConfigUpdate - 监控配置更新
// MonitorConfigUpdate - Monitor configuration update
message MonitorConfigUpdate {
  int32 config_version = 1;       // 配置版本号 / Configuration version
  bool auto_monitor = 2;          // 是否启用自动监控 / Enable auto monitoring
  bool auto_restart = 3;          // 是否启用自动拉起 / Enable auto restart
  int32 monitor_interval = 4;     // 监控间隔 (秒) / Monitor interval (seconds)
  int32 restart_delay = 5;        // 重启延迟 (秒) / Restart delay (seconds)
  int32 max_restarts = 6;         // 最大重启次数 / Max restart count
  int32 time_window = 7;          // 时间窗口 (秒) / Time window (seconds)
  int32 cooldown_period = 8;      // 冷却时间 (秒) / Cooldown period (seconds)
}
